# 82167_Vladimir_Iliev_CS2

./: README.md
15.03.2021/Seminar_15.03.2021/: Seminar_15.03.2021.sln  Seminar_15.03.2021.vcxproj  Seminar_15.03.2021.vcxproj.filters  Vector.cpp  Vector.h  main.cpp
15.03.2021/Seminar_15.03.2021/x64/Debug/: Seminar_15.03.2021.exe.recipe  Seminar_15.03.2021.ilk  Seminar_15.03.2021.vcxproj.FileListAbsolute.txt  vc142.idb
15.03.2021/Seminar_15.03.2021/x64/Debug/Seminar_.8fe6a096.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Seminar_15.03.2021.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Facebook/: CMakeLists.txt  Comment.cpp  Comment.h  PictureData.cpp  PictureData.h  UserData.cpp  UserData.h  main.cpp
UNO/: Card.cpp  Deck.cpp  Game.cpp  Player.cpp  main.cpp  uno.md
UNO :)/: uno.md
UNO/Header Files/: Card.h  Deck.h  Game.h  Player.h
UNO/Headers/: Card.h  Deck.h  Game.h  Player.h
UNO/Source Files/: Card.cpp  Deck.cpp  Game.cpp  Player.cpp
Upr_19.04_Game/: CMakeLists.txt  ReadMe.md  field.cpp  field.h  main.cpp
Upr_19.04_Game/Field/src/: field.cpp  field.h
Upr_19.04_Game/Hero/src/: Hero.cpp  Hero.h
Upr_19.04_Game/Paladin/src/: Paladin.cpp  Paladin.h
Upr_19.04_Game/Position/src/: Position.cpp  Position.h
Upr_19.04_Game/Warrior/src/: Warrior.cpp  Warrior.h
Upr_19.04_Game/Wizard/src/: Wizard.cpp  Wizard.h
